modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/function_param_type_invalid_contravariance_1.gd
class A:
	func f(_p: Object):
		pass

class B extends A:
	func f(_p: Node):
		pass

func test():
	pass
